# django-admin-superfilter

./: README.md  pyproject.toml
examples/sampleapp/bird_counter/: admin.py
examples/sampleapp/sampleapp/: asgi.py  settings.py  urls.py  wsgi.py
superfilter/: README.md  admin.py  apps.py  logic.py  models.py  tests.py
superfilter/migrations/: 0001_savedsuperfilter.py  0002_savedsuperfilter_columns.py
superfilter/static/superfilter/: superfilter.css  superfilter.js
